--- a/index.html
+++ b/index.html
@@ -22,15 +22,50 @@
     <title>Frontend Mentor | Social links profile</title>
   </head>
   <body>
-    <p>Jessica Randall</p>
-    <p>London, United Kingdom</p>
-    <p>"Front-end developer and avid reader."</p>
+    <main>
+      <div class="card">
+        <div class="card-user-profile">
+          <picture>
+            <source
+              srcset="./assets/images/avatar-jessica.webp"
+              type="image/webp"
+            />
+            <source
+              srcset="./assets/images/avatar-jessica.jpeg"
+              type="image/jpeg"
+            />
+            <img
+              src="./assets/images/avatar-jessica.jpeg"
+              alt="account profile photo"
+            />
+            <source />
+          </picture>
+          <h4>Jessica Randall</h4>
+          <h5>London, United Kingdom</h5>
+          <p>"Front-end developer and avid reader."</p>
+        </div>
 
-    <p>GitHub</p>
-    <p>Frontend Mentor</p>
-    <p>LinkedIn</p>
-    <p>Twitter</p>
-    <p>Instagram</p>
+        <div class="card-user-links">
+          <ul class="user-links-list">
+            <li>
+              <button>GitHub</button>
+            </li>
+            <li>
+              <button>Frontend Mentor</button>
+            </li>
+            <li>
+              <button>LinkedIn</button>
+            </li>
+            <li>
+              <button>Twitter</button>
+            </li>
+            <li>
+              <button>Instagram</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </main>
 
     <footer>
       <p>
