Added animations and updated readme

--- a/index.html
+++ b/index.html
@@ -47,19 +47,21 @@
 
         <ul class="user-links-list">
           <li>
-            <button>GitHub</button>
+            <button href="#" data-content="GitHub">GitHub</button>
           </li>
           <li>
-            <button>Frontend Mentor</button>
+            <button href="#" data-content="Frontend Mentor">
+              Frontend Mentor
+            </button>
           </li>
           <li>
-            <button>LinkedIn</button>
+            <button href="#" data-content="LinkedIn">LinkedIn</button>
           </li>
           <li>
-            <button>Twitter</button>
+            <button href="#" data-content="Twitter">Twitter</button>
           </li>
           <li>
-            <button>Instagram</button>
+            <button href="#" data-content="Instagram">Instagram</button>
           </li>
         </ul>
       </div>
