Replaced buttons with a elements

--- a/index.html
+++ b/index.html
@@ -46,21 +46,19 @@
 
         <ul class="user-links-list">
           <li>
-            <button href="#" data-content="GitHub">GitHub</button>
+            <a href="#" data-content="GitHub">GitHub</a>
           </li>
           <li>
-            <button href="#" data-content="Frontend Mentor">
-              Frontend Mentor
-            </button>
+            <a href="#" data-content="Frontend Mentor"> Frontend Mentor </a>
           </li>
           <li>
-            <button href="#" data-content="LinkedIn">LinkedIn</button>
+            <a href="#" data-content="LinkedIn">LinkedIn</a>
           </li>
           <li>
-            <button href="#" data-content="Twitter">Twitter</button>
+            <a href="#" data-content="Twitter">Twitter</a>
           </li>
           <li>
-            <button href="#" data-content="Instagram">Instagram</button>
+            <a href="#" data-content="Instagram">Instagram</a>
           </li>
         </ul>
       </div>
